营销短信文档更新，另外顺手把链接文字改了一下。

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -104,7 +104,7 @@
             <li><a href="relation_guide.html">关系建模指南</a></li>
             <li><a href="acl_guide-ios.html">权限管理使用指南</a></li>
             <li><a href="ios_statistics.html">统计分析开发指南</a></li>
-            <li><a href="sms_guide-ios.html">短信验证使用指南</a></li>
+            <li><a href="sms_guide-ios.html">短信服务使用指南</a></li>
             <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
             <li><a href="ios_os_x_faq.html">FAQ</a></li>
             <li><a href="/api-docs/iOS/index.html" target="_blank">iOS SDK API</a></li>
@@ -118,7 +118,7 @@
             <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
-            <li><a href="sms_guide-android.html">短信验证使用指南</a></li>
+            <li><a href="sms_guide-android.html">短信服务使用指南</a></li>
             <li><a href="android_faq.html">FAQ</a></li>
             <li><a href="/api-docs/android/index.html" target="_blank">Android SDK API</a></li>
           </ul>
@@ -130,7 +130,7 @@
             <li><a href="js_push.html">消息推送开发指南</a></li>
             <li><a href="js_realtime.html">实时通信开发指南</a></li>
             <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
-            <li><a href="sms_guide-js.html">短信验证使用指南</a></li>
+            <li><a href="sms_guide-js.html">短信服务使用指南</a></li>
             <li><a href="js_analytics.html">统计分析开发指南</a></li>
             <!-- <li><a href="js_faq.html">FAQ</a></li> -->
             <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
