--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -159,6 +159,10 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 <pre ng-non-bindable><code>尊敬的用户，你购买的服务《{{service_name}}》（订单号{{order_id}}）
 </code></pre>
 
+创建模板的时候，需要选择模板的类型，目前 LeanCloud 支持的短信类型分为：验证类，通知类，以及营销类。
+
+**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读[营销类](#营销类)**
+
 #### 使用模板
 
 当模板通过审批之后，就可以调用了：
@@ -178,9 +182,16 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - `code`：验证码
 - `ttl`：过期时间（默认为 10 分钟）
 
-#### 模板规范
+## 营销类
+营销类短信可以帮助开发者迅速拓张市场，并且是与潜在用户进行沟通的有效手段，因此 LeanCloud 特地开发了这一功能。
 
-本节内容是很多开发者容易忽略的重点知识。鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。
+营销类短信也是基于模板来实现的，因此使用时跟[通知类](#通知类)使用没有任何本质区别，步骤依次都是[创建模板](#创建模板) -> [使用模板](#使用模板)。
+
+## 模板规范
+随着开发者提交模板的多样化，我们也根据实际情况总结了一些模板的规范提供给开发者。
+再次声明，一切跟营销推广相关的短信模板，请在创建模板的时候一定要选择**营销类**，否则无法通过审核。
+
+鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。
 
 【正确范例一】
 
@@ -192,8 +203,10 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 错误点：
 
-- 通知内容中包含了推广信息：**打折、降价、仅售**，这些词语相对敏感，请谨慎使用。
+- 通知内容中包含了推广信息：**打折、降价、仅售**，这些词语相对敏感，请谨慎使用。（请参考[营销类短信](#营销类)）
 - 下载链接不可以是变量：下载链接是最为敏感的信息，为了确保安全，防止病毒以及不良信息传播，**我们不允许在短信模板中将下载链接设置为变量**。
+
+### 通知类模板
 
 【正确范例二】
 
@@ -203,7 +216,9 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 <pre ng-non-bindable><code>您好，本条短信来自“XX旅游”~恭喜幸运的您，在本次“北海道机票”抽奖活动中，获得二等奖——定制星巴克杯! 请您关注我们的微信公众号（XX旅游：xx_app)，回复“中奖名单”即可查看详细中奖名单及领取须知！后续还会有更多活动惊喜，期待您的参与~官方网站：xxsite.cn</code></pre>
 
-错误点：抽奖中奖信息格外敏感，这类信息审核标准很难统一。但是为了确保平台安全，开发者措辞文案需要慎重。
+错误点：不可以在[通知类](#通知类)模板中发送带有抽奖中奖信息等营销信息的内容。
+
+解决方案：**此类短信属于营销类短信，请在创建模板的时候选择[营销类短信](#营销类)**
 
 另外，有一些行业相关的敏感词语是不允许发送的：
 
@@ -212,6 +227,20 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 <pre ng-non-bindable><code>业主还在苦苦等待你的反馈，你认领的房源已超过1小时没有填写核实结果，请尽快登录XX客户端，在“业主--待处理”列表中进行填写。【XX网】</code></pre>
 
 错误点：包含了「房源」这个敏感词。一般来说，包含了**房源、借贷**等敏感词的内容很难通过审核，请酌情修改措辞。
+
+**注意：房源，借贷这类敏感词基本不可能通过 LeanCloud 短信平台发送，因为这些词语不论是通知类还是营销类都不允许被发送**
+
+### 营销类模板
+【正确范例三】
+
+#### 销售类
+<pre ng-non-bindable><code>X 牌新款春装已经上市，明星夫妻同款你值得拥有！详情请咨询当地 X牌门市店，或者直接登录 www.xxxx.com 查询门市店，或者拨打 010-00000000，凭短信可享 9 折优惠。</code></pre>
+
+#### 应用推广类
+【正确范例四】
+<pre ng-non-bindable><code>还在找寻同桌的她吗？还在烦恼过年回家联系不上旧同学吗？iOS 用户在 App Store 搜索：找同学，下载最新版的找同学，让同学聚会重温往日时光！</code></pre>
+
+注意：应用的下载链接必须是明文，不可设置为参数。
 
 ### 短信签名说明
 
