营销短信文档小修小改。

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -150,18 +150,22 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 创建模板的在控制台位置如下：
 
-![sms_template](images/sms_template.png)
+![sms_template](images/sms_template_v2.png)
 
-要创建短信模板，进入控制台，选择一个应用，再选择 [**消息** > **短信** > **设置**](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。
+创建模板需要选择指定一个已经通过审核的[短信签名](#短信签名说明)，并且选择模板的类型，目前支持以下三种类型：
 
-假设你提交了如下的短信模板，并且将这个模板的名称保存为 **Notice_Template**：
+- 通知类型
+- 验证码类型
+- 营销类型
 
-<pre ng-non-bindable><code>尊敬的用户，你购买的服务《{{service_name}}》（订单号{{order_id}}）
+创建短信模板的步骤如下：进入控制台，选择一个应用，再选择 [**消息** > **短信** > **设置**](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。
+
+假设你提交了如下的短信模板，并且将这个模板的名称保存为 **Notice_Welcome**：
+
+<pre ng-non-bindable><code>感谢您注册 LeanCloud! LeanCloud 为开发加速！
 </code></pre>
 
-创建模板的时候，需要选择模板的类型，目前 LeanCloud 支持的短信类型分为：验证类，通知类，以及营销类。
-
-**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读[营销类](#营销类)**
+**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读[营销类](#营销类)，营销类短信默认会在短信最后加上 「回复 TD 退订」 这是运营商强制要求。**
 
 #### 使用模板
 
@@ -183,15 +187,11 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - `ttl`：过期时间（默认为 10 分钟）
 
 ## 营销类
-营销类短信可以帮助开发者迅速拓张市场，并且是与潜在用户进行沟通的有效手段，因此 LeanCloud 特地开发了这一功能。
-
-营销类短信也是基于模板来实现的，因此使用时跟[通知类](#通知类)使用没有任何本质区别，步骤依次都是[创建模板](#创建模板) -> [使用模板](#使用模板)。
+营销类短信可以帮助开发者迅速拓张市场，并且是与潜在用户进行沟通的有效手段。营销类短信也是基于模板来实现的，因此使用时跟[通知类](#通知类)使用没有任何本质区别，步骤依次都是[创建模板](#创建模板) -> [使用模板](#使用模板)。
 
 ## 模板规范
-随着开发者提交模板的多样化，我们也根据实际情况总结了一些模板的规范提供给开发者。
-再次声明，一切跟营销推广相关的短信模板，请在创建模板的时候一定要选择**营销类**，否则无法通过审核。
-
 鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。
+再次声明，一切跟营销推广相关的短信模板，请在创建模板的时候一定要选择**营销类**，否则无法通过审核。
 
 【正确范例一】
 
@@ -228,9 +228,9 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 错误点：包含了「房源」这个敏感词。一般来说，包含了**房源、借贷**等敏感词的内容很难通过审核，请酌情修改措辞。
 
-**注意：房源，借贷这类敏感词基本不可能通过 LeanCloud 短信平台发送，因为这些词语不论是通知类还是营销类都不允许被发送**
-
+<div class="callout callout-danger">无论是通知类还是营销类短信，凡包含房源、借贷这类敏感词都被禁止发送。</div>
 ### 营销类模板
+
 【正确范例三】
 
 #### 销售类
@@ -238,13 +238,18 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 #### 应用推广类
 【正确范例四】
-<pre ng-non-bindable><code>还在找寻同桌的她吗？还在烦恼过年回家联系不上旧同学吗？iOS 用户在 App Store 搜索：找同学，下载最新版的找同学，让同学聚会重温往日时光！</code></pre>
+<pre ng-non-bindable><code>还在找寻同桌的 TA 吗？还在烦恼过年回家联系不上老同学吗？iOS 用户在 App Store 搜索：找同学，下载最新版的找同学，让同学聚会重温往日时光！</code></pre>
 
 注意：应用的下载链接必须是明文，不可设置为参数。
 
 ### 短信签名说明
 
 短信签名是指短信内容里用【】括起来的短信发送方名称。如果没有明确在模板里指定，默认就是你的应用名称。短信签名**不能超过 10 个字符（五个汉字），不能有任何非文字字符，也不可以是变量**。应用名称可以在应用设置里修改，并且短信签名**必须出现在短信内容的开头或者结尾。**
+
+#### 签名规范
+ - 签名必须是公司简称，品牌名，网站名，长度控制在 3 到 11 之间
+ - 不需要带上中文括号 【】
+ - 一个应用最多只可以拥有 3 个签名（包含审核未通过的签名）
 
 {% block sms_demo %}{% endblock %}
 
