所有 iOS  数据存储文档的链接都指向新的存储文档。

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -97,7 +97,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
-            <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
+            <li><a href="leanstorage_guide-ios.html">数据存储开发指南</a></li>
             <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
