--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -84,7 +84,7 @@
       <div class="link-block">
         <h2>iOS / OS X SDK</h2>
         <ul>
-          <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
+          <li><a href="leanstorage_guide-ios.html">数据存储开发指南</a></li>
           <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
           <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
