fix(setup): 更新安装指南模板中的描述

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -1,7 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
-# LeanCloud {% block language %}{% endblock %} SDK 安装指南
+# {% block language %}{% endblock %} SDK 安装指南
 
 ## 获取 SDK
 
@@ -12,42 +12,42 @@
 {% block libs_tool_automatic %}{% endblock %}
 
 ### 手动安装
-请访问 {% block sdk_download_link %}{% endblock %} 来获取 {% block language %}{% endblock %} 最新版本的 SDK。
+
+<a class="btn btn-default" target="_blank" href="sdk_down.html">下载 SDK</a>
 
 {% block import_sdk %}{% endblock %}
 
 ## 初始化
 
-首先来获取 App ID 以及 App Key。打开 [控制台 /（选择应用）/ 设置 / 应用 Key](/app.html?appid={{appid}}#/key)，如下图：
+首先来获取 App ID 以及 App Key。打开 [控制台 / 设置 / 应用 Key](/app.html?appid={{appid}}#/key)，如下图：
 
 ![setting_app_key](images/setting_app_key.png)
 {% block init_with_app_keys %}{% endblock %}
 
-### LeanCloud 支持的节点
+### 启用指定节点
 
-SDK 的初始化方法默认使用**中国大陆节点**，但是随着北美、欧洲、澳洲以及东南亚的开发者数量的增加，我们也在积极向海外拓展业务。目前除了中国大陆之外，我们已经上线或者正在计划内的节点有：
-
-* 北美节点（试运行一年，目前已正式上线），主要为北美开发者提供服务
-* 香港节点（正在部署，近期推出），主要为东南亚开发者提供服务
-
-注意，目前各个节点是 **相互独立** 的，开发者账号不能跨区域创建应用或者调用 API。
-
-#### 启用指定节点
-
-初始化 SDK 时，可以使用如下代码，告知 SDK 对应的 App ID 以及 App Key 属于哪个节点：
+SDK 的初始化方法默认使用**中国大陆节点**，如需切换到 [其他可用节点](#全球节点)，请参考如下用法：
 
 {% block sdk_switching_node %}{% endblock %}
+
+### 全球节点
+
+- 中国大陆节点（leancloud.cn）：SDK 的初始化方法**默认**使用该节点。
+- 北美节点（leancloud.us）：服务北美市场
+- ~~香港节点：服务东南亚市场~~（未上线，准备中）
+
+以上节点彼此**独立**，所以开发者账号不能跨节点来创建应用或调用 API。
 
 ## 验证
 
 首先，确认本地网络环境是可以访问 LeanCloud 服务器的，可以执行以下命令行：
 
-```
+```shell
 ping api.leancloud.cn
 ```
 如果当前网路正常将会得到如下响应：
 
-```
+```shell
 PING api.leancloud.cn (120.132.49.239): 56 data bytes
 64 bytes from 120.132.49.239: icmp_seq=3 ttl=49 time=65.165 ms
 64 bytes from 120.132.49.239: icmp_seq=4 ttl=49 time=53.273 ms
@@ -58,7 +58,7 @@ PING api.leancloud.cn (120.132.49.239): 56 data bytes
 
 {% block save_a_hello_world %}{% endblock %}
 
-然后打开 [控制台 /（选择应用）/ 存储 / TestObject（左侧）](/data.html?appid={{appid}}#/TestObject)，如果看到如下内容，说明 SDK 已经正确地执行了上述代码，安装完毕。
+然后打开 [控制台 > 存储 > 数据 > TestObject](/data.html?appid={{appid}}#/TestObject)，如果看到如下内容，说明 SDK 已经正确地执行了上述代码，安装完毕。
 
 ![testobject_saved](images/testobject_saved.png)
 
@@ -66,7 +66,7 @@ PING api.leancloud.cn (120.132.49.239): 56 data bytes
 
 ## 问题排查
 
-### App ID 或者 App Key 有误
+### 401 Unauthorized
 
 如果 SDK 抛出 401 异常或者查看本地网络访问日志存在：
 
