--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -82,7 +82,7 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="checkbox custom-control">
-                <label class="bspopover" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" data-title="详情" data-content="<p><strong>基础模块包含：</strong></p><ul><li>存储</li><li>统计</li></ul>">
+                <label class="bspopover" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" data-title="详情" data-content="<p><strong>基础模块包含：</strong></p><ul><li>存储</li></ul>">
                   <input type="checkbox" name="osx" disabled checked>
                   <span class="control-indicator"></span> 基础模块
                 </label>
