根据达叔建议做修改，请达叔审阅。

--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -15,13 +15,13 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 ### 使用 Pointers 实现一对多关系
 #### Pointers 存储
-中国的「省份」与「城市」的就是一个典型的一对多的关系，例如，深圳和广州（「城市」）都属于广东省（「省份」），而朝阳区和海淀区（「行政区」）只能属于北京市（「直辖市」）。广东省对应着多个一级行程城市，北京对应着多个行政区。如下代码将演示，如何使用 Pointers 来存储这种一对多的关系。
+中国的「省份」与「城市」就是一个典型的一对多的关系，例如，深圳和广州（「城市」）都属于广东省（「省份」），而朝阳区和海淀区（「行政区」）只能属于北京市（「直辖市」）。广东省对应着多个一级行政城市，北京对应着多个行政区。如下代码将演示，如何使用 Pointers 来存储这种一对多的关系。
 
 **注：为了表述方便，后文中提及城市都泛指一级行政市以及直辖市行政区，而省份也包含了北京，上海等直辖市。**
 
 {% block code_city_point_to_province %}{% endblock %}
 
-需要声明的是：被关联的对象会跟随着关联对象的保存而被保存到服务端。如果想关联一个已经存在服务端的对象，也可以使用如下代码，例如，下述代码将实现给「广东省」添加「东莞市」：
+需要声明的是：被关联的对象会跟随着关联对象的保存而被保存到服务端。如果想关联一个已经存在服务端的对象，也可以使用如下代码，例如，下述代码将实现给将「东莞市」添加至「广东省」：
 
 {% block code_city_point_to_province_with_objectId %}{% endblock %}
 
@@ -36,7 +36,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_query_province_by_city %}{% endblock %}
 
-假如已知了一个省份，想知道他所有下辖的城市，可以使用如下代码
+假如已知一个省份，要找出它的所有下辖城市，可以使用如下代码：
 
 {% block code_query_city_by_province %}{% endblock %}
 
@@ -99,7 +99,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 ### 使用关联表实现多对多关系
 也许某些情况下，我们需要知道更多关系的附加信息。比如学生选课的系统中，如果你想知道学生打算选修的这门课进行多长时间的学习，或者想知道学生选修是通过手机选修还是通过网站操作的，这个时候单独使用 `AVRelation` 就无法满足需求，因为 `AVRelation` 不支持额外的自定义属性，此时我们可以使用传统的数据库设计方法：关联表。
 
-为了实现这个需求，我们创建一个独立的表保存 `Student` 和 `Course` 的关系，暂且叫做 `CourseChoosing` 的表，然后它有以下几个字段：
+为了实现这个需求，我们创建一个独立的表保存 `Student` 和 `Course` 的关系，暂且叫做 `StudentCourseMap` 的表，然后它有以下几个字段：
 
 ```
 1.course ： Course 指针实例
@@ -115,7 +115,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_query_relationTable_students_in_course %}{% endblock %}
 
-同样，我们也可以很简单地查询某一个学生选修的所有课程，针对上述代码的只变换查询条件即可：
+同样，我们也可以很简单地查询某一个学生选修的所有课程，针对上述代码只需变换查询条件即可：
 
 {% block code_query_relationTable_courses_by_student %}{% endblock %}
 
@@ -126,7 +126,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_save_courses_using_arrays %}{% endblock %}
 
-当查询某一个学生选修的所有课程，则在查询的时候需要使用 `Include` 操作来获取对应的数组值： 
+当查询某一个学生选修的所有课程，则在查询的时候需要使用 `Include` 操作来获取对应的数组值：
 
 {% block code_query_courses_by_include %}{% endblock %}
 
