fix(docs): 纠正：短信模板中的 URL 中可以使用变量，但整个 URL 不可以是变量

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -15,6 +15,8 @@
 {% set name = '{{name}}' %}
 {% set code = '{{code}}' %}
 {% set ttl = '{{ttl}}' %}
+{% set bill_number = '{{bill_number}}' %}
+
 # {% block language %}{% endblock %} - 短信服务使用指南
 
 LeanCloud 短信服务支持的应用场景有以下三种：
@@ -152,7 +154,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ![sms_template](images/sms_template_v2.png)
 
-创建模板需要选择指定一个已经通过审核的[短信签名](#短信签名说明)，并且选择模板的类型，目前支持以下三种类型：
+创建模板需要选择指定一个已经通过审核的 [短信签名](#短信签名说明)，并且选择模板的类型，目前支持以下三种类型：
 
 - 通知类型
 - 验证码类型
@@ -165,7 +167,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 <pre ng-non-bindable><code>感谢您注册 LeanCloud! LeanCloud 为开发加速！
 </code></pre>
 
-**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读[营销类](#营销类)，营销类短信默认会在短信最后加上 「回复 TD 退订」 这是运营商强制要求。**
+**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读 [营销类](#营销类)。营销类短信默认会在短信最后加上 「回复 TD 退订」 这是运营商强制要求。**
 
 #### 使用模板
 
@@ -187,11 +189,12 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - `ttl`：过期时间（默认为 10 分钟）
 
 ## 营销类
-营销类短信可以帮助开发者迅速拓张市场，并且是与潜在用户进行沟通的有效手段。营销类短信也是基于模板来实现的，因此使用时跟[通知类](#通知类)使用没有任何本质区别，步骤依次都是[创建模板](#创建模板) -> [使用模板](#使用模板)。
+
+营销类短信是应用开发者与潜在客户沟通、进行产品推广和销售的有效手段。营销类短信也是基于模板来实现的，因此使用时跟 [通知类](#通知类) 使用没有任何本质区别，步骤依次是 [创建模板](#创建模板) > [使用模板](#使用模板)。
 
 ## 模板规范
-鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。
-再次声明，一切跟营销推广相关的短信模板，请在创建模板的时候一定要选择**营销类**，否则无法通过审核。
+
+鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。需要再次强调，一切跟营销推广相关的短信模板，请在创建模板时务必选择**营销类**，否则将无法通过审核。
 
 【正确范例一】
 
@@ -203,8 +206,10 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 错误点：
 
-- 通知内容中包含了推广信息：**打折、降价、仅售**，这些词语相对敏感，请谨慎使用。（请参考[营销类短信](#营销类)）
-- 下载链接不可以是变量：下载链接是最为敏感的信息，为了确保安全，防止病毒以及不良信息传播，**我们不允许在短信模板中将下载链接设置为变量**。
+- 通知内容中包含了推广信息：**打折、降价、仅售** 这些词语相对敏感，请谨慎使用。具体请参考 [营销类短信](#营销类)。
+- URL 不可以**全部**设置为变量：为了确保安全，防止病毒以及不良信息传播，**我们不允许在短信模板中将整个 URL 设置为变量**。但是 URL 中可以包含变量，比如：
+
+  <pre ng-non-bindable><code>亲，您的宝贝已上路，快递信息可以通过以下链接查询：http://www.sf-express.com/cn/#search/{{bill_number}} </code></pre>
 
 ### 通知类模板
 
@@ -216,9 +221,9 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 <pre ng-non-bindable><code>您好，本条短信来自“XX旅游”~恭喜幸运的您，在本次“北海道机票”抽奖活动中，获得二等奖——定制星巴克杯! 请您关注我们的微信公众号（XX旅游：xx_app)，回复“中奖名单”即可查看详细中奖名单及领取须知！后续还会有更多活动惊喜，期待您的参与~官方网站：xxsite.cn</code></pre>
 
-错误点：不可以在[通知类](#通知类)模板中发送带有抽奖中奖信息等营销信息的内容。
+错误点：不可以在 [通知类](#通知类) 模板中发送带有抽奖中奖信息等营销信息的内容。
 
-解决方案：**此类短信属于营销类短信，请在创建模板的时候选择[营销类短信](#营销类)**
+解决方案：**此类短信属于营销类短信，请在创建模板的时候选择 [营销类短信](#营销类)**。
 
 另外，有一些行业相关的敏感词语是不允许发送的：
 
