--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -132,6 +132,7 @@ https://leancloud.cn/1.1/functions/averageStars
 运行上述代码请确保已经正确安装了 LeanCloud iOS / OS SDK，详细请点击[LeanCloud iOS / OS X SDK 安装指南](sdk_setup-ios.html)。
 
 #### Android SDK 调用云函数
+{% block code_client_sdk_callfuntion %}{% endblock %}
 在 Android SDK 中，`AVCloud` 里面提供了一系列的静态方法实现客户端调用云函数，实例代码如下：
 
 ```java
