--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -320,6 +320,9 @@ WAP<br/>
 
 因为 {{productName}} 提供了语言运行时托管功能，这相当于为你在互联网上提供了一台简单的 VPS（虚拟主机），你可以用它接入第三方平台（很多第三方平台需要你有回调服务器），完成一些特定的工作。
 
+### 作为 OAuth 授权回调服务器
+[OAuth](http://oauth.net/2/) 是被广泛认可的第三方授权认证的协议，比如很多国内的应用接入微博，微信以及 QQ 登录的方式来方便用户免注册登录到系统中，那么在使用各大厂商提供的 OAuth 授权认证的接口时，都要开发者提供一个回调地址
+
 ### 接入支付宝
 
 通过 [cloud-code-alipay 示例](https://github.com/leancloud/cloud-code-alipay) 了解如何接入支付宝，实现「即时到账收款」的功能。
