fix(docs): 增加「云引擎运行模式」文档
同时修订 LeanCache 和云引擎文档中的错误

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -180,15 +180,15 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">云引擎</a>
           <ul class="dropdown-menu">
+          <li><a href="leanengine_plan.html">云引擎运行模式</a></li>
           <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
           <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
-          <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云引擎环境）</a></li>
+          <li><a href="leanengine_guide-cloudcode.html">旧版云引擎环境</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
           <li><a href="leancache_guide.html">LeanCache 使用指南</a></li>
           <li><a href="cloud_code_faq.html">FAQ</a></li>
-          <li><a href="js_guide.html">JavaScript 指南</a></li>
           </ul>
         </li>
 
