云引擎文档拆分初步解决方案。

--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -155,4 +155,88 @@ https://leancloud.cn/1.1/functions/averageStars
 
 ## 定时任务
 
-:TODO
+很多时候可能你想做一些定期任务，比如半夜清理过期数据，或者每周一给所有用户发送推送消息等等，我们提供了定时任务给你，让你可以在云引擎中运行这样的任务。
+
+**我们提供的定时任务的最小时间单位是秒，正常情况下我们都能将误差控制在秒级别。**
+
+{% block timerLegacy %}{% endblock %}
+
+定时任务也是普通的云引擎函数，比如我们定义一个打印循环打印日志的任务 `log_timer`：
+
+{% block timerExample %}{% endblock %}
+
+部署云引擎之后，进入云引擎管理菜单，左侧有个定时任务菜单：
+
+![image](images/schedule_timer1.png)
+
+选择创建定时器，选择定时任务执行的函数名称，执行环境等等：
+
+![image](images/schedule_timer2.png)
+
+定时任务分为两类：
+
+* 使用标准的 crontab 语法调度
+* 简单的循环调度，我们这里以循环调度为例，每隔 5 分钟打印日志。
+
+创建后，定时任务还没有启动，你需要在定时任务列表里启动这个任务：
+
+![image](images/schedule_timer3.png)
+
+接下里就可以在云引擎日志里看到这条日志的打印：
+
+![image](images/schedule_timer4.png)
+
+我们再尝试定义一个复杂一点的任务，比如每周一早上 8 点准时发送推送消息给用户：
+
+{% block timerExample2 %}{% endblock %}
+
+创建定时器的时候，选择 cron 表达式并填写为 `0 0 8 ? * MON`。
+
+crontab 的基本语法是：
+
+```
+秒 分钟 小时 每个月的日期（Day-of-Month）月份 星期（Day-of-Week） 年（可选）
+```
+
+一些常见的例子：
+
+表达式|说明
+---|---
+`"0 0/5 * * * ?"`|每隔 5 分钟执行一次
+`"10 0/5 * * * ?"`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
+<code style="white-space:nowrap;">"0 30 10-13 ? * WED,FRI"</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
+`"0 0/30 8-9 5,20 * ?"`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
+
+## 资源限制
+
+### 权限说明
+
+云引擎可以有超级权限，使用 master key 调用所有 API，因此会忽略 ACL 和 Class Permission 限制。你只需要使用下列代码来初始化 SDK：
+
+{% block masterKeyInit %}{% endblock %}
+
+如果在你的服务端环境里也想做到超级权限，也可以使用该方法初始化。
+
+{% block masterKeyInitLegacy %}{% endblock %}
+
+### 定时器数量
+
+生产环境和预备环境的定时器数量都限制在 3 个以内，也就是说你总共最多可以创建 6 个定时器。
+
+### 超时
+
+请求云引擎上的云函数时会经过负载均衡设备，该设备会限制一次请求的超时时间为 15 秒，如果超过 15 秒没有返回，请求将被强制停止，但此时云引擎的方法可能仍在执行，但执行完毕后的响应是无意义的。所有 Hook 函数，如 `beforeSave` 和 `afterSave` 的超时时间限制在 3 秒内。如果 Hook 函数被其他的云函数调用（比如因为 save 对象而触发 `beforeSave` 和 `afterSave`），那么它们的超时时间会进一步被其他云函数调用的剩余时间限制。例如，如果一个 `beforeSave` 函数是被一个已经运行了 13 秒的云函数触发，那么 `beforeSave` 函数就只剩下 2 秒的时间来运行，而正常情况下是 3 秒的限制。
+
+网站托管的动态请求超时也被限定为 15 秒。
+
+## 日志
+
+[云引擎 / 日志](/cloud.html?appid={{appid}}#/log)，可以查看云引擎的部署和运行日志，还可以选择查看的日志级别：
+
+![image](images/cloud_code_11.png)
+
+如果你想打印日志到里面查看，可以直接输出到「标准输出」或者「标准错误」，这些信息会分别对应日志的 `info` 和 `error` 级别，比如下列代码会在 info 级别记录参数信息：
+
+{% block loggerExample %}{% endblock %}
+
+**注意**：如果你的日志输出过于频繁（超过 50 条/秒），我们会丢弃部分日志信息。
