chore: 更新导航菜单：云引擎运行模式 => 运行方案

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -186,7 +186,7 @@
       <div class="link-block">
         <h2>云引擎</h2>
         <ul>
-          <li><a href="leanengine_plan.html">云引擎运行模式</a></li>
+          <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
           <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
           <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
           <li><a href="leanengine_guide-cloudcode.html">旧版云引擎环境</a></li>
