--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -180,7 +180,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">云引擎</a>
           <ul class="dropdown-menu">
-          <li><a href="leanengine_plan.html">云引擎运行模式</a></li>
+          <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
           <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
           <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
           <li><a href="leanengine_guide-cloudcode.html">旧版云引擎环境</a></li>
