--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -38,6 +38,13 @@ body {
     vertical-align: super;
     line-height: 0;
   }
+  
+  // text-underline
+  u {
+    text-decoration: none;
+	border-bottom: 1px solid #333;
+	padding-bottom: 2px;  
+  }
 }
 
 // Tables
