--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -101,7 +101,7 @@
             <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
-            <li><a href="relation_guide.html">关系建模指南</a></li>
+            <li><a href="relation_guide-ios.html">关系建模指南</a></li>
             <li><a href="acl_guide-ios.html">权限管理使用指南</a></li>
             <li><a href="ios_statistics.html">统计分析开发指南</a></li>
             <li><a href="sms_guide-ios.html">短信服务使用指南</a></li>
@@ -181,9 +181,10 @@
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">云引擎</a>
           <ul class="dropdown-menu">
           <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
-          <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
-          <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
-          <li><a href="leanengine_guide-cloudcode.html">旧版云引擎环境</a></li>
+          <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
+          <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
+          <li><a href="leanengine_guide-python.html">云引擎 Python 开发指南</a></li>
+          <li><a href="leanengine_examples.html">云引擎项目示例</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
