fix(docs): 使用新的工单系统链接

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -723,7 +723,7 @@ Cron 表达式的基本语法为：
 
 **请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**。
 
-其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
+其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://leanticket.cn/)，通过工单来提出申请：
 
 * 你已经绑定的 leanapp.cn 或 avosapps.us 二级子域名（请参考设置域名）
 * 要绑定的域名（必须是你名下的域名）
