fix(docs): [存储 iOS] 修订内容 v1

--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -1,3 +1,7 @@
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
+
 # LeanCloud {{platform}} 关系建模指南
 
 数据对象之间存在 3 种类型的关系。一对一关系可以将一个对象与另一个对象关联。一对多关系可以使一个对象关联多个对象。多对多关系可以实现大量对象之间的复杂关系。
