--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -1,16 +1,19 @@
-# 云函数开发指南-{{platformName}}
+# 云函数开发指南 &middot; {{platformName}}
 
-云函数是云引擎({{productName}})的一个子模块，请确保阅读本文档之前，已经阅读了[云引擎服务概览](leanengine_overview.html)。
+云函数是云引擎（{{productName}}）的一个子模块，请确保阅读本文档之前，你已经阅读了 [云引擎服务概览](leanengine_overview.html)。
 
+云函数是指开发者在使用 LeanCloud SDK，针对服务端的功能有自己特殊的自定义需求的时候，可以使用 {{productName}} 提供的云函数来实现。云函数包含以下几种：
 
-云函数指的是开发者在使用 LeanCloud SDK 的时候，针对服务端的功能有自己特殊的自定义需求的时候，可以使用 {{productName}} 提供的云函数来实现。云函数包含以下几种：
+<dl>
+  <dt>Hook 类型</dt>
+  <dd>比如有些应用想在用户注册时候给用户统一分配一个会员号，如果把生成会员号的代码放在客户端难免会造成编号冲突并且不便于统一算法，这个时候就可以使用云函数提供的 Hook 函数针对用户 login 接口做统一的处理。</dd>
+  <dt>自定义类型</dt>
+  <dd>比如有些应用会需要计算用户的账单信息，账单的计算依赖于多张表的查询结果，如果都放在客户端去做，那么 iOS 要写一套算法，Android 也要写一套算法，这显然是工作冗余，因此如果可以在服务单放一个 HTTP（HTTPS）接口让每一个客户端统一调用就可以解决这个问题。</dd>
+</dl>
 
-1. Hook 类型，比如有些应用想在用户注册时候给用户统一分配一个会员号，如果把生成会员号的代码放在客户端难免会造成编号冲突并且不便于统一算法，这个时候就可以使用云函数提供的 Hook 函数针对用户 login 接口做统一的处理。
-2. 自定义类型，比如有些应用会需要计算用户的账单信息，账单的计算依赖于多张表的查询结果，如果都放在客户端去做，那么 iOS 要写一套算法，Android 也要写一套算法，这显然是工作冗余，因此如果可以在服务单放一个 HTTP（HTTPS）接口让每一个客户端统一调用就可以解决这个问题。
+我们设定如下场景：一个给电影书籍评分的系统，假设把存储分数这个操作放在客户端，那么 iOS、Android 等诸多客户端都得构建几乎相同的一套算法业务逻辑代码，因此我们可以在 {{productName}} 上部署一套满足自己需求的云函数来实现这个功能。
 
-为了更好的介绍云函数的功能，我们设定一个如下的场景：一个给电影书籍评分的系统，假设把存储分数这个操作放在客户端，那么 iOS，Android 等诸多客户端都得构建几乎相同的一套算法业务逻辑代码，因此我们可以在 {{productName}} 上部署一套满足自己需求的云函数来实现这个功能。
-
-介绍云函数之前，请确保您已仔细阅读了客户端 SDK 的开发指南，因为云函数在很多时候是与客户端联合起来才能发挥更大的效果。
+使用云函数之前，请确保你已仔细阅读了客户端 SDK 的开发指南，因为云函数在很多时候是与客户端结合起来才能发挥更大的效用。
 
 ## Hook 函数
 {{storageName}} 提供的基于对象的存储，因此在客户端存储对象的时候，很多时候一些针对对象的统一操作需要在各个客户端进行相同的处理，正如前面说的统一为新注册用户提供唯一会员号，这种操作 {{productName}} 就通过 Hook 函数来开放给开发者自定义。
@@ -30,7 +33,7 @@
 
 {% block afterSaveExample2 %}{% endblock %}
 
-如果 `afterSave` 函数调用失败，save 请求仍然会返回成功应答给客户端。`afterSave` 发生的任何错误，都将记录到云引擎日志里，可以到 [控制台 / 存储 / 云引擎 / 日志](https://leancloud.cn/cloud.html?appid={{appid}}#/log) 中查看。
+如果 `afterSave` 函数调用失败，save 请求仍然会返回成功应答给客户端。`afterSave` 发生的任何错误，都将记录到云引擎日志里，可以到 [控制台 > 存储 > 云引擎 > 日志](https://leancloud.cn/cloud.html?appid={{appid}}#/log) 中查看。
 
 ### {{hook_before_update}}
 
@@ -74,6 +77,83 @@
 
 {% block onLoginExample %}{% endblock %}
 
+### 实时通信 Hook 函数
+
+请阅读 [实时通信概览 &middot; 云引擎 Hook](realtime_v2.html#云引擎_Hook) 来了解以下函数的具体用法：
+
+- `_messageReceived`
+- `_receiversOffline`
+- `_conversationStart`
+- `_conversationAdd`
+- `_conversationRemove`
+
+{% block hookDeadLoop %}
+
+### 防止死循环调用
+
+在实际使用中有这样一种场景：在 `Post` 类的 `afterUpdate` Hook 函数中，对传入的 `Post` 对象做了修改并且保存，而这个保存动作又会再次触发 `afterUpdate`，由此形成死循环。针对这种情况，我们为所有 Hook 函数传入的 `request.object` 对象做了处理，以阻止死循环调用的产生。
+
+不过请注意，以下情况还需要开发者自行处理：
+
+- 对传入的 `request.object` 对象进行 `fetch` 操作。
+- 重新构造传入的 `request.object` 对象，如使用 `AV.Object.createWithoutData()` 方法。
+
+对于使用上述方式产生的对象，请根据需要自行调用以下 API：
+
+- `object.disableBeforeHook()` 或 
+- `object.disableAfterHook()` 
+
+这样，对象的保存或删除动作就不会再次触发相关的 Hook 函数。
+
+```javascript
+AV.Cloud.afterUpdate('Post', function(request) {
+    // 直接修改并保存对象不会再次触发 afterUpdate Hook 函数
+    request.object.set('foo', 'bar');
+    request.object.save().then(function(obj) {
+      // 你的业务逻辑
+    });
+
+    // 如果有 fetch 操作，则需要在新获得的对象上调用相关的 disable 方法
+    // 来确保不会再次触发 Hook 函数
+    request.object.fetch().then(function(obj) {
+      obj.disableAfterHook();
+      obj.set('foo', 'bar');
+      return obj.save();
+    }).then(function(obj) {
+      // 你的业务逻辑
+    });
+
+    // 如果是其他方式构建对象，则需要在新构建的对象上调用相关的 disable 方法
+    // 来确保不会再次触发 Hook 函数
+    var obj = AV.Object.createWithoutData('Post', request.object.id);
+    obj.disableAfterHook();
+    obj.set('foo', 'bar');
+    obj.save().then(function(obj) {
+      // 你的业务逻辑
+    });
+  });
+```
+
+**提示**：云引擎 Node.js 环境从 [0.3.0](https://github.com/leancloud/leanengine-node-sdk/blob/master/CHANGELOG.md#v030-20151231) 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
+{% endblock %}
+
+### 错误响应码
+
+{% block errorCodeExample %}{% endblock %}
+
+客户端收到的响应：`{"code":211,"error":"Could not find user"}`
+
+{% block errorCodeExample2 %}{% endblock %}
+
+客户端收到的响应： `{"code":123,"error":"自定义错误信息"}`
+
+#### Hook 函数的区别
+
+为 `{{hook_before_save}}` 这类的 hook 函数定义错误码，需要这样：
+
+{% block errorCodeExampleForHooks %}{% endblock %}
+
+客户端收到的响应为：`Cloud Code validation failed. Error detail : {"code":123, "message": "自定义错误信息"}`，然后通过**截取字符串**的方式取出错误信息，再转换成需要的对象。
 
 ## 自定义云函数
 自定义云函数本质上是为了给开发者自定义服务端逻辑，例如有些应用的一些功能需要在服务端来实现，自定义云函数就提供了这种功能。
@@ -155,13 +235,11 @@ https://leancloud.cn/1.1/functions/averageStars
 
 ## 定时任务
 
-很多时候可能你想做一些定期任务，比如半夜清理过期数据，或者每周一给所有用户发送推送消息等等，我们提供了定时任务给你，让你可以在云引擎中运行这样的任务。
-
-**我们提供的定时任务的最小时间单位是秒，正常情况下我们都能将误差控制在秒级别。**
+定时任务可以按照设定，以一定间隔自动完成指定动作，比如半夜清理过期数据，每周一向所有用户发送推送消息等等。定时任务的最小时间单位是**秒**，正常情况下时间误差都可以控制在秒级别。
 
 {% block timerLegacy %}{% endblock %}
 
-定时任务也是普通的云引擎函数，比如我们定义一个打印循环打印日志的任务 `log_timer`：
+定时任务是普通的云引擎函数。比如定义一个打印循环打印日志的任务 `log_timer`：
 
 {% block timerExample %}{% endblock %}
 
@@ -192,20 +270,46 @@ https://leancloud.cn/1.1/functions/averageStars
 
 创建定时器的时候，选择 cron 表达式并填写为 `0 0 8 ? * MON`。
 
-crontab 的基本语法是：
+### Cron 表达式
+
+Cron 表达式的基本语法为：
 
 ```
-秒 分钟 小时 每个月的日期（Day-of-Month）月份 星期（Day-of-Week） 年（可选）
+<秒> <分钟> <小时> <日期 day-of-month> <月份> <星期 day-of-week> <年>
 ```
+位置|字段|约束|取值|可使用的特殊字符
+---|---|---|---|---
+1|秒|必须|0-59|`, - * /`
+2|分钟|必须|0-59|`, - * /`
+3|小时|必须|0-23（0 为午夜）|`, - * /`
+4|日期|必须|1-31|`, - * ? / L W`
+5|月份|必须|1-12、JAN-DEC|`, - * /`
+6|星期|必须|1-7、SUN-SAT|`, - * ? / L #`
+7|年|可选|空、1970-2099|`, - * /`
 
-一些常见的例子：
+特殊字符的用法：
 
-表达式|说明
----|---
-`"0 0/5 * * * ?"`|每隔 5 分钟执行一次
-`"10 0/5 * * * ?"`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
-<code style="white-space:nowrap;">"0 30 10-13 ? * WED,FRI"</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
-`"0 0/30 8-9 5,20 * ?"`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
+字符|含义|用法
+---|---|---
+`*`|所有值|代表一个字段的所有可能取值。如将 `<分钟>` 设为 **\***，表示每一分钟。
+`?`|不指定值|用于可以使用该字符的两个字段中的一个，在一个表达式中只能出现一次。如任务执行时间为每月 10 号，星期几无所谓，那么表达式中 `<日期>` 设为 **10**，`<星期>` 设为 **?**。
+`-`|范围|如 `<小时>` 为 **10-12**，即10 点、11 点、12 点。
+`,`|<span class="text-nowrap">分隔多个值</span>|如 `<星期>` 为 **MON,WED,FRI**，即周一、周三、周五。
+`/`|增量|如 `<秒>` 设为 **0/15**，即从 0 秒开始，以 15 秒为增量，包括 0、15、30、45 秒；**5/15** 即 5、20、35、50 秒。**\*/** 与 **0/** 等效，如 `<日期>` 设为 **1/3**，即从每个月的第一天开始，每 3 天（即每隔 2 天）执行一次任务。
+`L`|最后|其含义随字段的不同而不同。 `<日期>` 中使用 **L** 代表每月最后一天，如 1 月 31 号、2 月 28 日（非闰年）；`<星期>` 中单独使用 **L**，则与使用 **7** 或 **SAT** 等效，若前面搭配其他值使用，如 **6L**，则表示每月的最后一个星期五。<br/><br/>注意，**在 L 之前不要使用多个值或范围**，如 **1,2L**、**1-2L**，否则会产生错误结果。
+`W`|weekday|周一到周五的任意一天，离指定日期最近的非周末的那一天。<br/>`<日期>` 为 **15W** 即离 15 号最近的非周末的一天；如果 15 号是周六，任务则会在 14 号周五触发，如果 15 号是周日，则在 16 号周一触发，如果 15 号是周二，则周二当天触发。<br/><br/>`<日期>` 为 **1W**，如果 1 号是周六，任务则会在 3 号周一触发，因为不能向前跨月来计算天数。<br/><br/>在 `<日期>` 中 **W** 之前只能使用一个数值，不能使用多个值或范围。**LW** 可在 `<日期>` 中组合使用，表示每月最后一个非周末的一天。
+`#`|第 N 次|如 `<星期>` 为 **6#3** 代表每月第三个周五，**2#1** 为每月头一个周一，**4#5** 为每月第五个周三；如果当月没有第五周，则 **#5** 不会产生作用。
+
+各字段以空格或空白隔开。JAN-DEC、SUN-SAT 这些值不区分大小写，比如 MON 和 mon 效果一样。更详细的使用方法请参考 [Quartz 文档（英文）][quartz_docs]。
+
+### 错误信息
+
+定时器执行后的日志会记录在 [控制台 > 存储 > 云引擎 > 其它 > 日志](/cloud.html?appid={{appid}}#/log) 中，以下为常见的错误信息及原因。
+
+- **timerAction timed-out and no fallback available.**<br/>
+  某个定时器触发的云函数，因 15 秒内没有响应而超时。
+- **timerAction short-circuited and no fallback available.**<br/>
+  某个定时器触发的云函数，因为太多次超时而停止触发。
 
 ## 资源限制
 
@@ -240,3 +344,6 @@ crontab 的基本语法是：
 {% block loggerExample %}{% endblock %}
 
 **注意**：如果你的日志输出过于频繁（超过 50 条/秒），我们会丢弃部分日志信息。
+
+
+[quartz_docs]: http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger  "Quartz 文档"
