--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -1,23 +1,28 @@
-# 网站托管开发指南-{{platformName}}
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
+{% set var_app_domain = '{应用的域名}' %}
+# 网站托管开发指南 &middot; {{platformName}}
 
-网站托管是云引擎({{productName}})的一个子模块，请确保阅读本文档之前，已经阅读了[云引擎服务概览](leanengine_overview.html)。
- 
-云引擎（{{productName}}）是 LeanCloud 推出的服务端托管平台。为了统一名称，本文中出现的 {{productName}} 均代指云引擎。
+<dl>
+  <dt>云引擎（{{productName}}）</dt>
+  <dd>LeanCloud 推出的服务端托管平台。</dd>
+  <dt>网站托管（Web Hosting）</dt>
+  <dd>云引擎提供编程语言的运行时，让开发者可以自由部署自己的代码运行在 {{productName}} 云端。</dd>
+</dl>
 
-网站托管指的是 {{productName}} 提供编程语言的运行时，让开发者可以自由的部署自己的代码运行在 {{productName}} 云端。
+网站托管是云引擎的一个子模块，请确保在阅读本文档之前，你已阅读了 [云引擎服务概览](leanengine_overview.html)。
 
-更直接的方式是推荐您阅读 [Demo](#Demo) 这一章节的内容来快速的部署一个小项目到云端，运行起来。
+我们推荐从 [Demo](#Demo) 入手，以便能快速将一个小项目部署到云端，实际运行起来。
 
-## 网站托管支持的语言
+## 语言支持
 {% block link_to_other_languages %}{% endblock %}
 
 ## Demo
 {% block demo %}{% endblock %}
 
 ## 创建项目
-在本地创建项目需要使用 LeanCloud 官方命令行工具，详细请查阅：[云引擎命令行工具使用详解](cloud_code_commandline.html)
-
-请确保您已经在本地机器上可以成功运行命令行工具。
+在本地创建项目需要使用 LeanCloud 官方命令行工具，详细请查阅 [云引擎命令行工具使用详解](cloud_code_commandline.html)。请确保你已经在本地机器上可以成功运行命令行工具。
 
 ### 默认项目
 使用命令行工具创建的项目模板是一个空项目，它的结构如下：
@@ -30,43 +35,42 @@
 ## 本地运行
 {% block run_in_local_command %}{% endblock %}
 
-窗口会提示输入 Master Key，该信息可以在 [控制台 / 设置 / 应用 Key](/app.html?appid={{appid}}#/key) 中找到。
+窗口会提示输入 Master Key，该信息可以在 [控制台 > 设置 > 应用 Key](/app.html?appid={{appid}}#/key) 中找到。
 
 <div class="callout callout-info">复制粘贴 Master Key 后，窗口不会有任何显示，直接按回车键确认即可。</div>
 
-应用即可启动运行：<http://localhost:3000>
+应用即可启动运行 <http://localhost:3000>。
 
 ### 新建一个 Todo
-用浏览器打开:<http://localhost:3000/todos>
 
-然后在输入框输入：点个外卖
+1. 用浏览器打开 <http://localhost:3000/todos>，
+1. 在输入框输入：**点个外卖**；
+1. 打开控制台，选择对应的应用，可以看到在 Todo 表中会有一个新的记录，它的 `content` 列的值就是刚才输入的「点个外卖」。
 
-然后打开控制台，选择对应的应用，可以看到，在 Todo 表中会有一个新的记录，它的 `content` 列的值就是刚才输入的「点个外卖」。
-
-详细的实现细节请阅读源代码，里面有完整的代码以及注释帮助开发者理解如何在 {{productName}} 上编写符合自己项目需求的代码。
+详细的实现细节请阅读源代码，开发者可以通过完整的代码和注释来了解如何在 {{productName}} 上编写符合自己项目需求的代码。
 
 ## 部署到云端
 
-部署到预备环境：
+部署到<u>预备环境</u>：
 
 ```
 $ avoscloud deploy
 ```
 
-如果你设置了 [二级域名](#设置域名)，即可通过 `http://stg-${your_app_domain}.leanapp.cn` 访问你应用的预备环境。
+如果设置了 [二级域名](#设置域名)，即可通过 `http://stg-{{var_app_domain}}.leanapp.cn` 访问你应用的预备环境。
 
-部署到生产环境：
+部署到<u>生产环境</u>：
 
 ```
 $ avoscloud publish
 ```
 
-如果你设置了 [二级域名](#设置域名)，即可通过 `http://${your_app_domain}.leanapp.cn` 访问你应用的生产环境。
+如果设置了 [二级域名](#设置域名)，即可通过 `http://{{var_app_domain}}.leanapp.cn` 访问你应用的生产环境。
 
-关于设置域名的详细解释请参看[设置域名](#设置域名)这一章节的详细内容。
+详细内容请参看 [设置域名](#设置域名)。
 
 ## 线上调试
-打开浏览器，直接访问 `http://${your_app_domain}.leanapp.cn` ，可以看看是否能访问到网站的首页，它的首页应该会打印如下内容：
+打开浏览器，直接访问 `http://{{var_app_domain}}.leanapp.cn` ，可以看看是否能访问到网站的首页，它的首页应该会打印如下内容：
 
 ```
 LeanEngine
@@ -99,7 +103,7 @@ $ avoscloud deploy
 $ avoscloud publish
 ```
 
-然后再访问线上的地址：`http://${your_app_domain}.leanapp.cn/time`
+然后再访问线上的地址：`http://{{var_app_domain}}.leanapp.cn/time`
 就可以测试该 API 是否生效。
 
 然后你可以通过 iOS 或者 Android 的代码构建一个 HTTP 请求来使用这个 API 来获取服务端的时间了。
@@ -112,7 +116,7 @@ $ avoscloud publish
 
 ## 设置域名
 
-首先，你需要到 [云引擎 / 设置](/cloud.html?appid={{appid}}#/conf) 页面找到 **Web 主机域名**，在这里填写你的域名：
+首先，你需要到 [云引擎 > 设置](/cloud.html?appid={{appid}}#/conf) 页面找到 **Web 主机域名**，在这里填写你的域名：
 
 ![image](images/cloud_code_web_setting.png)
 
@@ -310,7 +314,7 @@ WAP<br/>
 
 为了安全性，我们可能会为网站加上 HTTPS 加密传输。我们的 {{productName}} 支持网站托管，同样会有这样的需求。
 
-因此我们在 {{productName}} 中提供了一个新的 middleware 来强制让你的 `${your_app_domain}.leanapp.cn` 的网站通过 https 访问，你只要这样：
+因此我们在 {{productName}} 中提供了一个新的 middleware 来强制让你的 `{{var_app_domain}}.leanapp.cn` 的网站通过 https 访问，你只要这样：
 
 {% block https_redirect %}{% endblock %}
 
