fix(docs): [云引擎] 恢复旧导航菜单
新版文档内容还有欠缺，暂时不上线。

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -187,10 +187,9 @@
         <h2>云引擎</h2>
         <ul>
           <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
-          <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
-          <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
-          <li><a href="leanengine_guide-python.html">云引擎 Python 开发指南</a></li>
-          <li><a href="leanengine_examples.html">云引擎项目示例</a></li>
+          <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
+          <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
+          <li><a href="leanengine_guide-cloudcode.html">旧版云引擎环境</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
