add issue list for android setup

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -85,3 +85,5 @@ PING api.leancloud.cn (120.132.49.239): 56 data bytes
 {% block permission_access_network_config %}{% endblock %}
 
 {% block platform_specific_faq %}{% endblock %}
+
+{% block android_multidex_issue %} {% endblock %}
