fix(docs): [云引擎] 补充 Hook 函数描述

--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -18,6 +18,10 @@
 ## Hook 函数
 {{storageName}} 提供的基于对象的存储，因此在客户端存储对象的时候，很多时候一些针对对象的统一操作需要在各个客户端进行相同的处理，正如前面说的统一为新注册用户提供唯一会员号，这种操作 {{productName}} 就通过 Hook 函数来开放给开发者自定义。
 
+Hook 函数本质上是云函数，但它有固定的名称，定义之后会**由系统**在特定事件或操作（如数据保存前、保存后，数据更新前、更新后等等）发生时**自动触发**，而不是由开发者来控制其触发时机。
+
+使用 Hook 函数需要注意 [防止死循环调用](#防止死循环调用)。
+
 ### {{hook_before_save}}
 在将对象保存到云端数据表之前，可以对数据做一些清理或验证。例如，一条电影评论不能过长，否则界面上显示不开，需要将其截断至 140 个字符：
 
