--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -2,21 +2,135 @@
 
 云函数是云引擎（{{productName}}）的一个子模块，请确保阅读本文档之前，你已经阅读了 [云引擎服务概览](leanengine_overview.html)。
 
-云函数是指开发者在使用 LeanCloud SDK，针对服务端的功能有自己特殊的自定义需求的时候，可以使用 {{productName}} 提供的云函数来实现。云函数包含以下几种：
+当你开发移动端应用时，可能会有下列需求：
 
-<dl>
-  <dt>Hook 类型</dt>
-  <dd>比如有些应用想在用户注册时候给用户统一分配一个会员号，如果把生成会员号的代码放在客户端难免会造成编号冲突并且不便于统一算法，这个时候就可以使用云函数提供的 Hook 函数针对用户 login 接口做统一的处理。</dd>
-  <dt>自定义类型</dt>
-  <dd>比如有些应用会需要计算用户的账单信息，账单的计算依赖于多张表的查询结果，如果都放在客户端去做，那么 iOS 要写一套算法，Android 也要写一套算法，这显然是工作冗余，因此如果可以在服务单放一个 HTTP（HTTPS）接口让每一个客户端统一调用就可以解决这个问题。</dd>
-</dl>
+* 应用在多平台客户端（Android, iOS, Windows Phone, 浏览器等）中很多逻辑都是一样的，希望将这部分逻辑抽取出来只维护一份。
+* 有些逻辑希望能够较灵活的调整（比如某些个性化列表的排序规则），但又不希望频繁的更新和发布移动客户端。
+* 有些逻辑需要的数据量很大，或者运算成本高（比如某些统计汇总需求），不希望在移动客户端进行运算，因为这样会消耗大量的网络流量和手机运算能力。
+* 当应用执行特定操作时，由云端系统自动触发一段逻辑（称为 [Hook 函数](#Hook_函数)），比如：用户注册后对该用户增加一些信息记录用于统计；或某业务数据发生变化后希望做一些别的业务操作。这些代码不适合放在移动客户端（比如因为上面提到的几个原因）。
+* 需要定时任务，比如每天凌晨清理垃圾注册账号等。
 
-我们设定如下场景：一个给电影书籍评分的系统，假设把存储分数这个操作放在客户端，那么 iOS、Android 等诸多客户端都得构建几乎相同的一套算法业务逻辑代码，因此我们可以在 {{productName}} 上部署一套满足自己需求的云函数来实现这个功能。
+这时，你可以使用云引擎的云函数。云函数是一段部署在服务端的代码，编写 JavaScript 或者 Python 代码，并部署到我们的平台上，可以很好的完成上述需求。
 
-使用云函数之前，请确保你已仔细阅读了客户端 SDK 的开发指南，因为云函数在很多时候是与客户端结合起来才能发挥更大的效用。
+如果还不知道如何创建云引擎项目，本地调试并部署到云端，请阅读 [云引擎快速入门](leanengine_quickstart.html)。
+
+## 云函数
+
+示例项目中 {{ cloud_func_file }} 文件定义了一个很简单的 `hello` 云函数。现在让我们看一个明显较复杂的例子来展示云引擎的用途。在云端进行计算的一个重要理由是，你不需要将大量的数据发送到设备上做计算，而是将这些计算放到服务端，并返回结果这一点点信息就好。
+
+例如，你写了一个应用，让用户对电影评分，一个评分对象大概是这样：
+
+```json
+{
+  "movie": "夏洛特烦恼",
+  "stars": 5,
+  "comment": "夏洛一梦，笑成麻花"
+}
+```
+
+`stars` 表示评分，1-5。如果你想查找《夏洛特烦恼》这部电影的平均分，你可以找出这部电影的所有评分，并在设备上根据这个查询结果计算平均分。但是这样一来，尽管你只是需要平均分这样一个数字，却不得不耗费大量的带宽来传输所有的评分。通过云引擎，我们可以简单地传入电影名称，然后返回电影的平均分。
+
+Cloud 函数接收 JSON 格式的请求对象，我们可以用它来传入电影名称。整个 {{ sdk_guide_link }} 都在云引擎运行环境上有效，可以直接使用，所以我们可以使用它来查询所有的评分。结合在一起，实现 `averageStars` 函数的代码如下：
+
+{% block cloudFuncExample %}{% endblock %}
+
+### 参数信息
+
+{% block cloudFuncParams %}{% endblock %}
+
+### 调用云函数
+
+#### iOS /OS X SDK 调用云函数
+
+在 iOS SDK 中，`AVCloud` 里面提供了一系列的静态方法实现客户端调用云函数，实例代码如下：
+
+```objc
+     // 构建传递给服务端的参数字典
+     NSDictionary *dicParameters = [NSDictionary dictionaryWithObject:@"夏洛特烦恼" forKey:@"movie"];
+    
+    // 调用指定名称的云函数，并且传递参数
+    [AVCloud callFunctionInBackground:@"averageStars" withParameters:dicParameters block:^(id object, NSError *error) {
+        // 执行结果
+    }];
+```
+
+运行上述代码请确保已经正确安装了 LeanCloud iOS / OS SDK，详细请点击[LeanCloud iOS / OS X SDK 安装指南](sdk_setup-ios.html)。
+
+#### Android SDK 调用云函数
+
+{% block code_client_sdk_callfuntion %}{% endblock %}
+在 Android SDK 中，`AVCloud` 里面提供了一系列的静态方法实现客户端调用云函数，实例代码如下：
+
+
+```java
+    // 构建参数
+    Map<String, String> dicParameters = new HashMap<String, String>();
+    dicParameters.put("movie", "夏洛特烦恼");
+
+    // 调用云函数
+    AVCloud.callFunctionInBackground("publishPost", dicParameters, new FunctionCallback() {
+        public void done(Object object, AVException e) {
+            if (e == null) {
+                // 处理返回结果
+            } else {
+                // 处理一场报错
+            }
+        }
+    });
+```
+运行上述代码请确保已经正确安装了 LeanCloud Android SDK，详细请点击[LeanCloud Android SDK 安装指南](sdk_setup-android.html)。
+
+#### 云引擎调用云函数
+
+在云引擎中可以使用 {{ runFuncName }} 调用 {{ defineFuncName }} 定义的云函数：
+
+{% block runFuncExample %}{% endblock %}
+
+API 参数详解参见 {{ runFuncApiLink }}。
+
+**提示**：云引擎中调用云函数会变成一次本地调用，不会向其他 SDK 那样发起一次 HTTP 请求。
+
+#### 通过 REST API 调用云函数
+[REST API 调用云函数](rest_api.html#云函数-1) 是 LeanCloud 云端提供的统一的访问云函数的接口，所有的客户端 SDK 也都是封装了这个接口实现对云函数进行调用。
+
+关于调试工具，我们推荐的工具有：[Postman](http://www.getpostman.com/) 以及 [Paw](#https://luckymarmot.com/paw) ，他们可以帮助开发者更方便地调试 Web API。
+
+假设没有以上工具，也可以使用命令行进行调试：
+
+```sh
+curl -X POST -H "Content-Type: application/json; charset=utf-8" \
+       -H "X-LC-Id: {{appid}}" \
+       -H "X-LC-Key: {{appkey}}" \
+       -H "X-LC-Prod: 0" \
+       -d '{"movie":"夏洛特烦恼"}' \
+https://leancloud.cn/1.1/functions/averageStars
+``` 
+上述命令行实际上就是向服务端发送一个 JSON 对象作为参数，参数的内容是告诉服务端要查询的电影的名字。
+
+### 错误响应码
+
+{% block errorCodeExample %}{% endblock %}
+
+客户端收到的响应：`{"code":211,"error":"Could not find user"}`
+
+{% block errorCodeExample2 %}{% endblock %}
+
+客户端收到的响应： `{"code":123,"error":"自定义错误信息"}`
+
+### 云函数超时
+
+云函数超时时间为 15 秒，如果超过阈值，{{leanengine_middleware}} 将强制响应：
+
+* 客户端收到 HTTP status code 为 503 响应，body 为 `The request timed out on the server.`。
+* 服务端会出现类似这样的日志：`LeanEngine function timeout, url=/1.1/functions/<cloudFunc>, timeout=15000`
+
+另外还需要注意：虽然 {{leanengine_middleware}} 已经响应，但此时云函数可能仍在执行，但执行完毕后的响应是无意义的。
 
 ## Hook 函数
-{{storageName}} 提供的基于对象的存储，因此在客户端存储对象的时候，很多时候一些针对对象的统一操作需要在各个客户端进行相同的处理，正如前面说的统一为新注册用户提供唯一会员号，这种操作 {{productName}} 就通过 Hook 函数来开放给开发者自定义。
+
+Hook 函数本质上是云函数，但它有固定的名称，定义之后会**由系统**在特定事件或操作（如数据保存前、保存后，数据更新前、更新后等等）发生时**自动触发**，而不是由开发者来控制其触发时机。
+
+使用 Hook 函数需要注意 [防止死循环调用](#防止死循环调用)。
 
 ### {{hook_before_save}}
 在将对象保存到云端数据表之前，可以对数据做一些清理或验证。例如，一条电影评论不能过长，否则界面上显示不开，需要将其截断至 140 个字符：
@@ -139,99 +253,19 @@ AV.Cloud.afterUpdate('Post', function(request) {
 
 ### 错误响应码
 
-{% block errorCodeExample %}{% endblock %}
-
-客户端收到的响应：`{"code":211,"error":"Could not find user"}`
-
-{% block errorCodeExample2 %}{% endblock %}
-
-客户端收到的响应： `{"code":123,"error":"自定义错误信息"}`
-
-#### Hook 函数的区别
-
 为 `{{hook_before_save}}` 这类的 hook 函数定义错误码，需要这样：
 
 {% block errorCodeExampleForHooks %}{% endblock %}
 
 客户端收到的响应为：`Cloud Code validation failed. Error detail : {"code":123, "message": "自定义错误信息"}`，然后通过**截取字符串**的方式取出错误信息，再转换成需要的对象。
 
-## 自定义云函数
-自定义云函数本质上是为了给开发者自定义服务端逻辑，例如有些应用的一些功能需要在服务端来实现，自定义云函数就提供了这种功能。
+### Hook 函数超时
 
-### 在线编写云函数
-很多人使用 {{productName}} 是为了在服务端提供一些个性化的方法供各终端调用，而不希望关心诸如代码托管、npm 依赖管理等问题。为此我们提供了在线维护云函数的功能。
+Hook 函数的超时时间为 3 秒。如果 Hook 函数被其他的云函数调用（比如因为 save 对象而触发 `beforeSave` 和 `afterSave`），那么它们的超时时间会进一步被其他云函数调用的剩余时间限制。
 
-使用此功能，你需要注意：
+例如，如果一个 `beforeSave` 函数是被一个已经运行了 13 秒的云函数触发，那么 `beforeSave` 函数就只剩下 2 秒的时间来运行。
 
-* 会替代你之前 git 或者命令行部署的项目。
-* 暂不提供主机托管功能。
-* 维护的所有函数可以生成并导出一个完整的项目，供 git 或命令行部署（即将推出）。
-
-![image](images/cloud_code_snippet.png)
-
-左上角的 **创建函数** 可以新创建一个函数，在 `funcName` 输入框里面输入：`averageStars`，并在函数体内输入如下代码：
-
-{% block code_averageStars_sample %}{% endblock %}
-
-然后点击保存，保存成功之后，再点击发布。
-
-上述代码完成的功能是从客户端获取传递过来的电影名称，然后在服务端进行计算，然后将计算结果返回给客户端，如果电影名称不存在则直接返回错误信息。
-
-### 调用云函数
-
-#### 通过 REST API 调用云函数
-[REST API 调用云函数](rest_api.html#云函数-1) 是 LeanCloud 云端提供的统一的访问云函数的接口，所有的 SDK 也都是封装了这个接口实现对云函数进行调用的。
-
-关于调试工具，我们推荐的工具有：[Postman](http://www.getpostman.com/) 以及 [Paw](#https://luckymarmot.com/paw) ，他们可以帮助开发者更方便地调试 Web API。
-
-假设没有以上工具，也可以使用命令行进行调试：
-
-```sh
-curl -X POST -H "Content-Type: application/json; charset=utf-8" \
-       -H "X-LC-Id: {{appid}}" \
-       -H "X-LC-Key: {{appkey}}" \
-       -H "X-LC-Prod: 0" \
-       -d '{"movie":"夏洛特烦恼"}' \
-https://leancloud.cn/1.1/functions/averageStars
-``` 
-上述命令行实际上就是向服务端发送一个 JSON 对象作为参数，参数的内容是告诉服务端要查询的电影的名字。
-
-#### iOS /OS X SDK 调用云函数
-在 iOS SDK 中，`AVCloud` 里面提供了一系列的静态方法实现客户端调用云函数，实例代码如下：
-
-```objc
-     // 构建传递给服务端的参数字典
-     NSDictionary *dicParameters = [NSDictionary dictionaryWithObject:@"夏洛特烦恼" forKey:@"movie"];
-    
-    // 调用指定名称的云函数，并且传递参数
-    [AVCloud callFunctionInBackground:@"averageStars" withParameters:dicParameters block:^(id object, NSError *error) {
-        // 执行结果
-    }];
-```
-
-运行上述代码请确保已经正确安装了 LeanCloud iOS / OS SDK，详细请点击[LeanCloud iOS / OS X SDK 安装指南](sdk_setup-ios.html)。
-
-#### Android SDK 调用云函数
-{% block code_client_sdk_callfuntion %}{% endblock %}
-在 Android SDK 中，`AVCloud` 里面提供了一系列的静态方法实现客户端调用云函数，实例代码如下：
-
-```java
-    // 构建参数
-    Map<String, String> dicParameters = new HashMap<String, String>();
-    dicParameters.put("movie", "夏洛特烦恼");
-
-    // 调用云函数
-    AVCloud.callFunctionInBackground("publishPost", dicParameters, new FunctionCallback() {
-        public void done(Object object, AVException e) {
-            if (e == null) {
-                // 处理返回结果
-            } else {
-                // 处理一场报错
-            }
-        }
-    });
-```
-运行上述代码请确保已经正确安装了 LeanCloud Android SDK，详细请点击[LeanCloud Android SDK 安装指南](sdk_setup-android.html)。
+{% block online_editer %}{% endblock %}
 
 ## 定时任务
 
@@ -239,36 +273,24 @@ https://leancloud.cn/1.1/functions/averageStars
 
 {% block timerLegacy %}{% endblock %}
 
-定时任务是普通的云引擎函数。比如定义一个打印循环打印日志的任务 `log_timer`：
+定时任务是普通的云函数。比如定义一个打印循环打印日志的任务 `log_timer`：
 
 {% block timerExample %}{% endblock %}
 
-部署云引擎之后，进入云引擎管理菜单，左侧有个定时任务菜单：
+部署云引擎之后，进入 [控制台 > 存储 > 云引擎 > 在线编辑](/cloud.html?appid={{appid}}#/online)，在右侧页面中选择 **定时任务** > **创建定时器**，然后设定其所执行的函数名称、执行环境等等。
 
-![image](images/schedule_timer1.png)
-
-选择创建定时器，选择定时任务执行的函数名称，执行环境等等：
-
-![image](images/schedule_timer2.png)
+定时器创建后，其状态为**未运行**，需要点击 <span class="label label-default">启用</span> 来激活。之后其执行日志可以通过 [其它 > 日志](/cloud.html?appid={{appid}}#/log) 查看。
 
 定时任务分为两类：
 
-* 使用标准的 crontab 语法调度
-* 简单的循环调度，我们这里以循环调度为例，每隔 5 分钟打印日志。
-
-创建后，定时任务还没有启动，你需要在定时任务列表里启动这个任务：
-
-![image](images/schedule_timer3.png)
-
-接下里就可以在云引擎日志里看到这条日志的打印：
-
-![image](images/schedule_timer4.png)
-
-我们再尝试定义一个复杂一点的任务，比如每周一早上 8 点准时发送推送消息给用户：
+* 使用 Cron 表达式（即[标准的 crontab 语法][quartz_docs]）安排调度
+* 以秒为单位的简单循环调度
+ 
+以 Cron 表达式为例，比如每周一早上 8 点准时发送推送消息给用户：
 
 {% block timerExample2 %}{% endblock %}
 
-创建定时器的时候，选择 cron 表达式并填写为 `0 0 8 ? * MON`。
+创建定时器的时候，选择 **Cron 表达式** 并填入 `0 0 8 ? * MON`。
 
 ### Cron 表达式
 
@@ -300,7 +322,20 @@ Cron 表达式的基本语法为：
 `W`|weekday|周一到周五的任意一天，离指定日期最近的非周末的那一天。<br/>`<日期>` 为 **15W** 即离 15 号最近的非周末的一天；如果 15 号是周六，任务则会在 14 号周五触发，如果 15 号是周日，则在 16 号周一触发，如果 15 号是周二，则周二当天触发。<br/><br/>`<日期>` 为 **1W**，如果 1 号是周六，任务则会在 3 号周一触发，因为不能向前跨月来计算天数。<br/><br/>在 `<日期>` 中 **W** 之前只能使用一个数值，不能使用多个值或范围。**LW** 可在 `<日期>` 中组合使用，表示每月最后一个非周末的一天。
 `#`|第 N 次|如 `<星期>` 为 **6#3** 代表每月第三个周五，**2#1** 为每月头一个周一，**4#5** 为每月第五个周三；如果当月没有第五周，则 **#5** 不会产生作用。
 
-各字段以空格或空白隔开。JAN-DEC、SUN-SAT 这些值不区分大小写，比如 MON 和 mon 效果一样。更详细的使用方法请参考 [Quartz 文档（英文）][quartz_docs]。
+各字段以空格或空白隔开。JAN-DEC、SUN-SAT 这些值不区分大小写，比如 MON 和 mon 效果一样。更详细的使用方法请参考 [Quartz 文档（英文）](http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger  "Quartz 文档")
+
+举例如下：
+
+表达式|说明
+---|---
+`0  0/5 * * * ?`|每隔 5 分钟执行一次
+`10 0/5 * * * ?`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
+<code style="white-space:nowrap;">0 30 10-13 ? * WED,FRI</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
+`0 0/30 8-9 5,20 * ?`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
+
+### 定时器数量
+
+生产环境和预备环境的定时器数量都限制在 5 个以内，也就是说你总共最多可以创建 10 个定时器。
 
 ### 错误信息
 
@@ -311,9 +346,7 @@ Cron 表达式的基本语法为：
 - **timerAction short-circuited and no fallback available.**<br/>
   某个定时器触发的云函数，因为太多次超时而停止触发。
 
-## 资源限制
-
-### 权限说明
+## 权限说明
 
 云引擎可以有超级权限，使用 master key 调用所有 API，因此会忽略 ACL 和 Class Permission 限制。你只需要使用下列代码来初始化 SDK：
 
@@ -322,28 +355,3 @@ Cron 表达式的基本语法为：
 如果在你的服务端环境里也想做到超级权限，也可以使用该方法初始化。
 
 {% block masterKeyInitLegacy %}{% endblock %}
-
-### 定时器数量
-
-生产环境和预备环境的定时器数量都限制在 3 个以内，也就是说你总共最多可以创建 6 个定时器。
-
-### 超时
-
-请求云引擎上的云函数时会经过负载均衡设备，该设备会限制一次请求的超时时间为 15 秒，如果超过 15 秒没有返回，请求将被强制停止，但此时云引擎的方法可能仍在执行，但执行完毕后的响应是无意义的。所有 Hook 函数，如 `beforeSave` 和 `afterSave` 的超时时间限制在 3 秒内。如果 Hook 函数被其他的云函数调用（比如因为 save 对象而触发 `beforeSave` 和 `afterSave`），那么它们的超时时间会进一步被其他云函数调用的剩余时间限制。例如，如果一个 `beforeSave` 函数是被一个已经运行了 13 秒的云函数触发，那么 `beforeSave` 函数就只剩下 2 秒的时间来运行，而正常情况下是 3 秒的限制。
-
-网站托管的动态请求超时也被限定为 15 秒。
-
-## 日志
-
-[云引擎 / 日志](/cloud.html?appid={{appid}}#/log)，可以查看云引擎的部署和运行日志，还可以选择查看的日志级别：
-
-![image](images/cloud_code_11.png)
-
-如果你想打印日志到里面查看，可以直接输出到「标准输出」或者「标准错误」，这些信息会分别对应日志的 `info` 和 `error` 级别，比如下列代码会在 info 级别记录参数信息：
-
-{% block loggerExample %}{% endblock %}
-
-**注意**：如果你的日志输出过于频繁（超过 50 条/秒），我们会丢弃部分日志信息。
-
-
-[quartz_docs]: http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger  "Quartz 文档"
