fix(docs): [短信] 增加购买短信说明
Closes #1050

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -35,9 +35,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 * **造谣诽谤**
 * **我国现行法律、行政法规及政策所禁止的内容**
 
-因此我们重申：
-
->LeanCloud 需要审核短信内容，并且保留对发送人追究相关法律责任的权力！
+因此，LeanCloud 需要<u>审核短信内容，并且保留对发送人追究相关法律责任的权力</u>。
 
 ## 短信服务配置
 
@@ -66,6 +64,12 @@ LeanCloud 短信服务支持的应用场景有以下三种：
   关闭：请求验证发送短信以及验证短信验证码都会被服务端拒绝，但是请注意，跟用户相关的验证与该选项无关。
 
 了解以上配置项有助于开发者针对业务需求，在功能选择上做出调整。下面，我们根据不同的需求逐一介绍短信服务的功能。
+
+### 短信购买
+
+短信发送采取实时扣费，0.06 元/条。如果当前账户没有足够的<u>短信余额</u>（注意不是账户余额），短信将无法发送。充值请进入 [开发者账户 > 财务 > 财务概况](/bill.html#/bill/general)，点击 **短信充值**。
+
+同时我们建议设定好短信的 [余额告警](/settings.html#/setting/alert)，以便在第一时间收到短信或邮件获知短信余额不足。
 
 ## 验证类
 
