--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -35,7 +35,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 * **造谣诽谤**
 * **我国现行法律、行政法规及政策所禁止的内容**
 
-因此，LeanCloud 需要<u>审核短信内容，并且保留对发送人追究相关法律责任的权力</u>。
+因此，LeanCloud 需要审核短信内容，并且保留对发送人追究相关法律责任的权力。
 
 ## 短信服务配置
 
@@ -131,18 +131,14 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 一般来说，用户收到的注册验证短信内容为：
 
-```
-【AppName】欢迎使用 AppName 服务，您的安全码是 123456，请输入完成验证。
-```
+<samp ng-non-bindable class="bubble">【AppName】欢迎使用 AppName 服务，您的安全码是 123456，请输入完成验证。</samp>
 
 其中 **AppName** 是应用的名称，如果这个名称超过五个汉字（10 个字符）的长度，就会因为签名太长而被短信供应商拒绝发送。请到 [**控制台** > **设置**](https://leancloud.cn/app.html?appid={{appid}}#/general) 页面修改应用名称。
 
 ## 通知类
 通知类短信是很多人每天都可能收到的信息，例如，联通用户从外地进入上海可能会收到如下短信：
 
-```
-尊敬的用户：欢迎您来到上海，如需帮助请拨打客服热线10010或登录www.10010.com，优惠订购机票酒店请拨打116114。中国联通
-```
+<samp ng-non-bindable class="bubble">尊敬的用户：欢迎您来到上海，如需帮助请拨打客服热线10010或登录www.10010.com，优惠订购机票酒店请拨打116114。中国联通</samp>
 
 这是一个来自通信运营商的通知类短信的规范案例。
 
@@ -164,18 +160,11 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - 验证码类型
 - 营销类型
 
-创建短信模板的步骤如下：进入控制台，选择一个应用，再选择 [**消息** > **短信** > **设置**](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。
-
-假设你提交了如下的短信模板，并且将这个模板的名称保存为 **Notice_Welcome**：
-
-<pre ng-non-bindable><code>感谢您注册 LeanCloud! LeanCloud 为开发加速！
-</code></pre>
-
-**请注意：勾选了通知类或者验证类，短信内容如果涉及到营销是无法通过审核的，要发送营销类短信请阅读 [营销类](#营销类)。营销类短信默认会在短信最后加上 「回复 TD 退订」 这是运营商强制要求。**
+创建短信模板的步骤如下：进入控制台，选择一个应用，再选择 [**消息** > **短信** > **设置**](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。**模板类型如果选择了通知类或者验证类，但短信内容如果涉及营销内容则无法通过审核。**要发送营销类短信请阅读 [营销类](#营销类)。
 
 #### 使用模板
 
-当模板通过审批之后，就可以调用了：
+假设提交的短信模板名称为 `Notice_Welcome`，当模板通过审批后就可以调用了：
 
 {% block send_sms_by_template %}{% endblock %}
 
@@ -185,8 +174,8 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 模板还可以使用<u>系统预留变量</u>，在发送短信发送时，它们会被自动填充：
 
-<pre ng-non-bindable><code>欢迎注册{{name}}应用！请使用验证码 {{code}} 来完成注册。该验证码将在{{ttl}}分钟后失效，请尽快使用。
-</code></pre>
+<samp ng-non-bindable class="bubble">欢迎注册{{name}}应用！请使用验证码 {{code}} 来完成注册。该验证码将在{{ttl}}分钟后失效，请尽快使用。
+</samp>
 
 - `name`：应用名称
 - `code`：验证码
@@ -196,58 +185,60 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 营销类短信是应用开发者与潜在客户沟通、进行产品推广和销售的有效手段。营销类短信也是基于模板来实现的，因此使用时跟 [通知类](#通知类) 使用没有任何本质区别，步骤依次是 [创建模板](#创建模板) > [使用模板](#使用模板)。
 
+营销类短信默认会在短信最后加上「**回复 TD 退订**」，这是运营商的强制要求。
+
 ## 模板规范
 
 鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。需要再次强调，一切跟营销推广相关的短信模板，请在创建模板时务必选择**营销类**，否则将无法通过审核。
 
-【正确范例一】
+【正确范例】
 
-<pre ng-non-bindable><code>XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号： XX租房。XX租房APP下载地址：http://example.com/download.html</code></pre>
+<samp ng-non-bindable class="bubble">XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号： XX租房。XX租房APP下载地址：http://example.com/download.html</samp>
 
-〖错误示例一〗
 
-<pre ng-non-bindable><code>尊敬的会员您好，您的订单（订单号{{orderId}}）已确认支付。5周年庆新品降价！大牌奢品上演底价争霸，低至2折！BV低至888元！阿玛尼低至199元！都彭长款钱包仅售499元！杜嘉班纳休闲鞋仅售1399元！周年庆家居专场千元封顶现已开启！{{download_link}} 客服电话400-881-6609 回复TD退订</code></pre>
+### 链接
 
-错误点：
+短信中的 URL 不允许**全部**设置为变量，这样是为了确保安全，防止病毒以及不良信息的传播。错误范例如下：
 
-- 通知内容中包含了推广信息：**打折、降价、仅售** 这些词语相对敏感，请谨慎使用。具体请参考 [营销类短信](#营销类)。
-- URL 不可以**全部**设置为变量：为了确保安全，防止病毒以及不良信息传播，**我们不允许在短信模板中将整个 URL 设置为变量**。但是 URL 中可以包含变量，比如：
+<samp ng-non-bindable class="bubble">尊敬的会员您好，您的订单（订单号{{orderId}}）已确认支付。5周年庆新品降价！大牌奢品上演底价争霸，低至2折！BV低至888元！阿玛尼低至199元！都彭长款钱包仅售499元！杜嘉班纳休闲鞋仅售1399元！周年庆家居专场千元封顶现已开启！{{download_link}} 客服电话400-881-6609 回复TD退订</samp>
 
-  <pre ng-non-bindable><code>亲，您的宝贝已上路，快递信息可以通过以下链接查询：http://www.sf-express.com/cn/#search/{{bill_number}} </code></pre>
+>另外，以上通知内容包含了象 **打折、降价、仅售** 这类营销推广的敏感词语，容易导致审批无法通过，因此请谨慎使用或改用 [营销类短信](#营销类)。
+
+但是 URL 中可以包含变量，比如：
+
+<samp ng-non-bindable class="bubble">亲，您的宝贝已上路，快递信息可以通过以下链接查询：http://www.sf-express.com/cn/#search/{{bill_number}} </samp>
 
 ### 通知类模板
 
-【正确范例二】
+【正确范例】
 
-<pre ng-non-bindable><code>恭喜您获得关注广州体彩微信送“排列三”的活动彩票，您的号码是第{{phase}}期的：{{num}}。开奖时间为{{date}}，请关注公众号—开奖信息查询中奖状态。</code></pre>
+<samp ng-non-bindable class="bubble">恭喜您获得关注广州体彩微信送“排列三”的活动彩票，您的号码是第{{phase}}期的：{{num}}。开奖时间为{{date}}，请关注公众号—开奖信息查询中奖状态。</samp>
 
-〖错误示例二〗
+〖错误范例〗
 
-<pre ng-non-bindable><code>您好，本条短信来自“XX旅游”~恭喜幸运的您，在本次“北海道机票”抽奖活动中，获得二等奖——定制星巴克杯! 请您关注我们的微信公众号（XX旅游：xx_app)，回复“中奖名单”即可查看详细中奖名单及领取须知！后续还会有更多活动惊喜，期待您的参与~官方网站：xxsite.cn</code></pre>
+<samp ng-non-bindable class="bubble">您好，本条短信来自“XX旅游”~恭喜幸运的您，在本次“北海道机票”抽奖活动中，获得二等奖——定制星巴克杯! 请您关注我们的微信公众号（XX旅游：xx_app)，回复“中奖名单”即可查看详细中奖名单及领取须知！后续还会有更多活动惊喜，期待您的参与~官方网站：xxsite.cn</samp>
 
-错误点：不可以在 [通知类](#通知类) 模板中发送带有抽奖中奖信息等营销信息的内容。
+错误点在于不可以在 [通知类](#通知类) 模板中发送带有抽奖中奖信息等营销信息的内容。解决方案是**在创建模板的时候选择 [营销类短信](#营销类)**。
 
-解决方案：**此类短信属于营销类短信，请在创建模板的时候选择 [营销类短信](#营销类)**。
+另外，有一些行业相关的敏感词语是不允许发送的，错误范例如下：
 
-另外，有一些行业相关的敏感词语是不允许发送的：
+<samp ng-non-bindable class="bubble">业主还在苦苦等待你的反馈，你认领的房源已超过1小时没有填写核实结果，请尽快登录XX客户端，在“业主--待处理”列表中进行填写。【XX网】</samp>
 
-〖错误示例三〗
+<div class="callout callout-danger">无论是通知类还是营销类短信，凡包含<u>房源</u>、<u>借贷</u>这类敏感词都被禁止发送。</div>
 
-<pre ng-non-bindable><code>业主还在苦苦等待你的反馈，你认领的房源已超过1小时没有填写核实结果，请尽快登录XX客户端，在“业主--待处理”列表中进行填写。【XX网】</code></pre>
-
-错误点：包含了「房源」这个敏感词。一般来说，包含了**房源、借贷**等敏感词的内容很难通过审核，请酌情修改措辞。
-
-<div class="callout callout-danger">无论是通知类还是营销类短信，凡包含房源、借贷这类敏感词都被禁止发送。</div>
 ### 营销类模板
 
-【正确范例三】
-
 #### 销售类
-<pre ng-non-bindable><code>X 牌新款春装已经上市，明星夫妻同款你值得拥有！详情请咨询当地 X牌门市店，或者直接登录 www.xxxx.com 查询门市店，或者拨打 010-00000000，凭短信可享 9 折优惠。</code></pre>
+
+【正确范例】
+
+<samp ng-non-bindable class="bubble">X牌新款春装已经上市，明星夫妻同款你值得拥有！详情请咨询当地X牌门市店，或者直接登录 www.xxxx.com 查询门市店，或者拨打 010-00000000，凭短信可享 9 折优惠。</samp>
 
 #### 应用推广类
-【正确范例四】
-<pre ng-non-bindable><code>还在找寻同桌的 TA 吗？还在烦恼过年回家联系不上老同学吗？iOS 用户在 App Store 搜索：找同学，下载最新版的找同学，让同学聚会重温往日时光！</code></pre>
+
+【正确范例】
+
+<samp ng-non-bindable class="bubble">还在找寻同桌的 TA 吗？还在烦恼过年回家联系不上老同学吗？iOS 用户在 App Store 搜索：找同学，下载最新版的找同学，让同学聚会重温往日时光！</samp>
 
 注意：应用的下载链接必须是明文，不可设置为参数。
 
