--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -14,7 +14,7 @@
 
 云引擎支持多种语言的运行环境，你可以选择自己熟悉的语言开发应用：
 
-- [Node.js](leanengine_guide-node.html)
+- [Node.js](leanengine_webhosting_guide-node.html)
 - [Python](leanengine_guide-python.html)
 <!-- - PHP：[云引擎开发指南-PHP](leanengine_guide_v2-php.html) -->
 
